syntax = "proto3";

package inventory;

option go_package = "github.com/yourusername/inventory-service/internal/proto";

service InventoryService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc GetProductByID(GetProductRequest) returns (ProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (Empty);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string category = 3;
    float price = 4;
    int32 stock = 5;
}

message CreateProductRequest {
    string name = 1;
    string category = 2;
    float price = 3;
    int32 stock = 4;
}

message GetProductRequest {
    string id = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string category = 3;
    float price = 4;
    int32 stock = 5;
}

message DeleteProductRequest {
    string id = 1;
}

message ListProductsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ProductResponse {
    Product product = 1;
}

message ListProductsResponse {
    repeated Product products = 1;
}

message Empty {}